src/test/ui/const-generics/issues/issue-73508.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-73508.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: using raw pointers as const generic parameters is forbidden
  --> $DIR/issue-73508.rs:3:33
   |
LL | pub const fn func_name<const X: *const u32>() {}
   |                                 ^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

